--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,8 @@ file.reference.AbsoluteLayout.jar=C:\\Users\\Atta\\Documents\\NetBeansProjects\\
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
