--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,12 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/RentalMobil.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.AbsoluteLayout.jar=C:\\Users\\Atta\\Documents\\NetBeansProjects\\Co Cars\\dist\\lib\\AbsoluteLayout.jar
+file.reference.AbsoluteLayout.jar-1=E:\\SEM3\\Tubes3\\AbsoluteLayout.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=E:\\SEM3\\Tubes3\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.AbsoluteLayout.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.AbsoluteLayout.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
