--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-/dist/
-/build/
-*.properties
-nbproject/private/private.xml
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
