--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,10 +32,10 @@ file.reference.mysql-connector-java-5.1.23-bin.jar-1=dist\\lib\\mysql-connector-
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${libs.absolutelayout.classpath}:\
     ${file.reference.AbsoluteLayout.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
