--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.jar=${dist.dir}/RentalMobil.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.AbsoluteLayout.jar=dist\\lib\\AbsoluteLayout.jar
+file.reference.AbsoluteLayout.jar-1=E:\\SEM3\\Tubes3\\AbsoluteLayout.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=E:\\SEM3\\Tubes3\\mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar-1=dist\\lib\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
@@ -35,7 +37,9 @@ javac.classpath=\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.AbsoluteLayout.jar-1}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
