--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,4 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Rani\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.AbsoluteLayout.jar-1=E:\\Tubes PBO\\Tubes PBO 2\\TubesPBO\\dist\\lib\\AbsoluteLayout.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=E:\\Tubes PBO\\Tubes PBO 2\\TubesPBO\\dist\\lib\\mysql-connector-java-5.1.23-bin.jar
+user.properties.file=C:\\Users\\Atta\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
