--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.AbsoluteLayout.jar=dist\\lib\\AbsoluteLayout.jar
 file.reference.AbsoluteLayout.jar-1=E:\\SEM3\\Tubes3\\AbsoluteLayout.jar
+file.reference.javafx-ui-common.jar=E:\\Tubes PBO\\javafx-ui-common.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=E:\\SEM3\\Tubes3\\mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar-1=dist\\lib\\mysql-connector-java-5.1.23-bin.jar
 includes=**
@@ -39,7 +40,9 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.AbsoluteLayout.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.javafx-ui-common.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
